[package]
name = "twinkle-bench"
version = "0.1.0"
authors = ["Akihito KIRISAKI <kirisaki@klaraworks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "^0.2"
futures = "^0.3"
redis = "^0.13"

[dependencies.twinkle]
path = "../twinkle-rust"